--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-﻿@using EmployeesWebApp
+﻿@using api.Models
+@using api.DTO
+@using EmployeesWebApp
 @using EmployeesWebApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
