minor name change

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,8 +17,8 @@
 <table class="table">
     <thead>
         <tr>
-            <th>@Html.DisplayNameFor(model => model.First().Fname)</th>
-            <th>@Html.DisplayNameFor(model => model.First().Lname)</th>
+            <th>First Name</th>
+            <th>Last Name</th>
             <th>@Html.DisplayNameFor(model => model.First().Address)</th>
             <th>@Html.DisplayNameFor(model => model.First().Contact)</th>
             <th>@Html.DisplayNameFor(model => model.First().Company)</th>
