--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create Employee";
 }
 
-<h1>Create Employee</h1>
+<h1>Create New Employee</h1>
 
 <h4>Employee</h4>
 <hr />
@@ -12,14 +12,19 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div class="form-group">
-                <label asp-for="Fname" class="control-label"></label>
+                <label asp-for="Fname" class="control-label">First Name</label>
                 <input asp-for="Fname" class="form-control" />
                 <span asp-validation-for="Fname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Lname" class="control-label"></label>
+                <label asp-for="Lname" class="control-label"> Last Name</label>
                 <input asp-for="Lname" class="form-control" />
                 <span asp-validation-for="Lname" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Pay" class="control-label">Salary</label>
+                <input asp-for="Pay" class="form-control" />
+                <span asp-validation-for="Pay" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
@@ -32,7 +37,7 @@
                 <span asp-validation-for="Contact" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Company" class="control-label"></label>
+                <label asp-for="Company" class="control-label">Department</label>
                 <input asp-for="Company" class="form-control" />
                 <span asp-validation-for="Company" class="text-danger"></span>
             </div>
