--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
             <th>Last Name</th>
             <th>@Html.DisplayNameFor(model => model.First().Address)</th>
             <th>@Html.DisplayNameFor(model => model.First().Contact)</th>
-            <th>@Html.DisplayNameFor(model => model.First().Company)</th>
+            <th>Department</th>
             <th>@Html.DisplayNameFor(model => model.First().Summary)</th>
             <th></th>
         </tr>
